[BACKLOG-29275] Fix for overlapping fields

--- a/plugins/connections/ui/src/main/javascript/app/components/summary/summary.css
+++ b/plugins/connections/ui/src/main/javascript/app/components/summary/summary.css
@@ -14,6 +14,10 @@
   width: 50%;
 }
 
+.group .full {
+  width: 100%;
+}
+
 .group .value {
   float: right;
   width: 50%;
@@ -52,17 +56,21 @@
 connection-summary .main_div {
   height: calc(100% - 140px);
   display: flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -webkit-flex;
   flex-direction: column;
 }
 
 connection-summary .overflow-container {
   flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  -webkit-flex: 1;
   overflow: auto;
 }
 
 connection-summary .middle_div {
   width: 480px;
-  display: flex;
-  flex-direction: column;
   height: 100%;
 }
